--- a/carrito.html
+++ b/carrito.html
@@ -15,7 +15,7 @@
     </div>
 
     <div class="nav-buttons">
-      <a href="cafe alegria.html" class="volver-btn">Volver</a>
+      <a href="index.html" class="volver-btn">Volver</a>
     </div>
   </nav>
 
@@ -207,4 +207,5 @@
   <script src="script.js"></script>
 
 </body>
+
 </html>
